[package]
name = "mork-tests"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_hello"
path = "src/bin/test_hello.rs"

[[bin]]
name = "test_ipc_buffer"
path = "src/bin/test_ipc_buffer.rs"

[[bin]]
name = "test_thread_create"
path = "src/bin/test_thread_create.rs"

[dependencies]
mork-common = { path = "../mork-common" }
mork-user-lib = { path = "../mork-user-lib" }
log = "0.4"

[profile.release]
lto = true